# anwari

./: CMakeLists.txt  LICENSE.md  README.md
include/anwari/: hello.h
src/: CMakeLists.txt  hello.cpp
tests/: CMakeLists.txt  hello.cpp
